--- a/collaboration/index.html
+++ b/collaboration/index.html
@@ -1,76 +1,98 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
-<head>
-
-	<!-- Basic Page Needs
-  ================================================== -->
-	<meta charset="utf-8">
-	<title>Your Page Title Here :)</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<!-- Mobile Specific Metas
-  ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-	<!-- CSS
-  ================================================== -->
-	<link rel="stylesheet" href="stylesheets/base.css">
-	<link rel="stylesheet" href="stylesheets/skeleton.css">
-	<link rel="stylesheet" href="stylesheets/layout.css">
-
-	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-
-	<!-- Favicons
-	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-
-</head>
-<body>
-
-
-
-	<!-- Primary Page Layout
-	================================================== -->
-
-	<!-- Delete everything in this .container and get started on your own site! -->
-
-	<div class="container">
-		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px">Skeleton</h1>
-			<h5>Version 1.2</h5>
-			<hr />
-		</div>
-		<div class="one-third column">
-			<h3>About Skeleton?</h3>
-			<p>Skeleton is a small collection of well-organized CSS files that can help you rapidly develop sites that look beautiful at any size, be it a 17" laptop screen or an iPhone. It's based on a responsive grid, but also provides very basic CSS for typography, buttons, forms and media queries. Go ahead, resize this super basic page to see the grid in action.</p>
-		</div>
-		<div class="one-third column">
-			<h3>Three Core Principles</h3>
-			<p>Skeleton is built on three core principles:</p>
-			<ul class="square">
-				<li><strong>A Responsive Grid Down To Mobile</strong>: Elegant scaling from a browser to tablets to mobile.</li>
-				<li><strong>Fast to Start</strong>: It's a tool for rapid development with best practices</li>
-				<li><strong>Style Agnostic</strong>: It provides the most basic, beautiful styles, but is meant to be overwritten.</li>
-			</ul>
-		</div>
-		<div class="one-third column">
-			<h3>Docs &amp; Support</h3>
-			<p>The easiest way to really get started with Skeleton is to check out the full docs and info at <a href="http://www.getskeleton.com">www.getskeleton.com.</a>. Skeleton is also open-source and has a <a href="https://github.com/dhgamache/skeleton">project on git</a>, so check that out if you want to report bugs or create a pull request. If you have any questions, thoughts, concerns or feedback, please don't hesitate to email me at <a href="mailto:hi@getskeleton.com">hi@getskeleton.com</a>.</p>
-		</div>
-
-	</div><!-- container -->
+<!--[if lt IE 7 ]>
+<html class="ie ie6" lang="en">
+   <![endif]-->
+   <!--[if IE 7 ]>
+   <html class="ie ie7" lang="en">
+      <![endif]-->
+      <!--[if IE 8 ]>
+      <html class="ie ie8" lang="en">
+         <![endif]-->
+         <!--[if (gte IE 9)|!(IE)]><!-->
+         <html lang="en">
+            <!--<![endif]-->
+            <head>
+               <!-- Basic Page Needs
+                  ================================================== -->
+               <meta charset="utf-8">
+               <title>Health Network of Missouri</title>
+               <meta name="description" content="">
+               <meta name="author" content="">
+               <!-- Mobile Specific Metas
+                  ================================================== -->
+               <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+               <!-- CSS
+                  ================================================== -->
+               <link rel="stylesheet" href="stylesheets/base.css">
+               <link rel="stylesheet" href="stylesheets/skeleton.css">
+               <link rel="stylesheet" href="stylesheets/layout.css">
+               <!--[if lt IE 9]>
+               <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+               <![endif]-->
+               <!-- Favicons
+                  ================================================== -->
+               <link rel="shortcut icon" href="images/favicon.ico">
+            </head>
+            <body>
+               <!-- Primary Page Layout
+                  ================================================== -->
+               <!-- Delete everything in this .container and get started on your own site! -->
+               <div class="container">
+                  <div class="sixteen columns" style="padding-top:3em;">
+                     <div class="eight columns omega">
+                        <img src="images/logo.png" width="480px">
+                        <iframe src="http://new.livestream.com/accounts/3974121/events/3126775/player?width=480&height=270&autoPlay=true&mute=false" width="480" height="270" frameborder="0" scrolling="no"> </iframe>
+                     </div>
+                     <div class="eight columns omega">
+                        <img src="images/map.png" width="500px">
+                     </div>
+                  </div>
+               </div>
 
 
-<!-- End Document
-================================================== -->
-</body>
-</html>
+
+
+               <div class="sixteen columns" style="background-color:#dedede;">
+                  <div class="container" style="padding:3em 0 3em 0">
+                  <h1>Hospitals Form Network to Improve Health Care Access and Coordinated Care for Patients</h1>
+ 
+<p>Bothwell Regional Health Center in Sedalia, Capital Region Medical Center in Jefferson City, Hannibal Regional Healthcare System, Lake Regional Health System in Osage Beach and University of Missouri Health Care in Columbia have formed a collaborative network to improve access and better coordinate health care for patients in the communities they serve.</p>
+
+<p>The five founding members of the Health Network of Missouri have more than 1,000 hospital beds, more than 9,300 employees and approximately 1,000 employed and affiliated physicians. They serve patients in adjacent counties throughout central and northeast Missouri.</p>
+
+<blockquote>“The nation’s health care delivery system is changing rapidly,” said Harold Williamson Jr., MD, executive vice chancellor of health affairs for the University of Missouri. “Hospitals and health systems must be innovative in developing ways to improve the health of populations, enhance the experience and outcomes of patients, and reduce per capita cost of care for the benefit of communities.”</blockquote>
+
+<p>The Health Network of Missouri is structured to allow members to work together as partners on common goals while enabling each hospital or health system to serve the health care needs of its own community and preserve its independence and unique identity. Each system will have equal representation in governance of the network.
+The five health systems will work together to share best practices in business, clinical and operational practices.  The work of the network will be conducted by task forces comprised of physicians and other leaders from each health system. Major initiatives of the Health Network of Missouri task forces will include:</p>
+<ul>
+<li>Continuing to improve the health outcomes of the patients they serve</ul>
+<li>Sharing data and best practices</ul>
+<li>Improving access to care</ul>
+<li>Ensuring patient care among various providers is coordinated seamlessly through a clinically integrated network</ul>
+<li>Lowering health-care costs and creating efficiencies that will benefit the patients and communities served by network members</li></ul>
+
+  <p>“MU Health Care’s goal in joining the Health Network of Missouri is to continue to ensure our patients receive exceptional care,” said Mitch Wasden, EdD, MU Health Care chief executive officer and chief operating officer. “While remaining independent, the hospitals and health systems in this network will be in a position to drive positive change and improve health care for the patients in our communities.”</p>
+
+<p>“Because MU Health Care is an academic medical center and tertiary care center, our patients often see MU physicians for specialty care,” said C. Todd Ahrens, president and chief executive officer for Hannibal Regional Healthcare System.  “Through the network’s initiatives, we look forward to the possibility of developing a stronger clinical relationship.”</p>
+
+<p>The network’s organizational meeting was held June 25.</p>
+               </div></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+               <!-- container -->
+               <!-- End Document
+                  ================================================== -->
+            </body>
+         </html>
